Modificaciones en controladores, modelos y vistas del sistema; agregados nuevos archivos para la gestión de reservas y reportes

--- a/src/main/java/vista/Administrador/paneles/PanelHabitacionesAdm.form
+++ b/src/main/java/vista/Administrador/paneles/PanelHabitacionesAdm.form
@@ -695,10 +695,15 @@
             </Constraint>
           </Constraints>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField1">
+        <Component class="javax.swing.JTextField" name="txtBuscarHabitaciones">
           <Properties>
             <Property name="text" type="java.lang.String" value="Buscar Habitacion"/>
           </Properties>
+          <Events>
+            <EventHandler event="focusLost" listener="java.awt.event.FocusListener" parameters="java.awt.event.FocusEvent" handler="txtBuscarHabitacionesFocusLost"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="txtBuscarHabitacionesMouseClicked"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtBuscarHabitacionesActionPerformed"/>
+          </Events>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="23" y="74" width="276" height="32"/>
