--- a/src/main/java/vista/Administrador/paneles/PanelPerfilAdm.form
+++ b/src/main/java/vista/Administrador/paneles/PanelPerfilAdm.form
@@ -551,7 +551,7 @@
         <Container class="javax.swing.JPanel" name="jPanel1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="ff" green="66" red="66" type="rgb"/>
+              <Color blue="0" green="0" red="99" type="rgb"/>
             </Property>
           </Properties>
           <Constraints>
